# csearch

./: Cargo.toml  LICENSE.md  README.md
app/: Cargo.toml
app/src/: actions.rs
app/src/models/: query.rs
cli/: Cargo.toml
cli/src/: cli_app.rs  main.rs
cli/src/cli_app/: browser_arg.rs  query_arg.rs  search_engine_arg.rs
csearch_app/: Cargo.toml
csearch_app/src/actions/: open_browser.rs
csearch_cli/: Cargo.toml
csearch_cli/src/: cli_app.rs
csearch_cli/src/cli_app/: actions.rs  browser_arg.rs  completions_arg.rs  query_arg.rs  search_engine_arg.rs
src/: args.rs  core_logic.rs  main.rs  models.rs
src/args/: browser_arg.rs  query_arg.rs  search_engine_arg.rs
src/core_logic/: browser_actions.rs  url_actions.rs
src/models/: browser.rs  query.rs  search_engine.rs
