[package]
name = "cli"
version = "1.0.0"
edition = "2021"
authors = ["Daniil Nebytov <daniil2002.11@mail.ru>"]
description = "Enter your query and it will be opened in browser"
license = "MIT"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0.70"
app = { version = "1.0.0", path = "../app" }
clap = { version = "4.1.13", features = ["cargo"] }
nameof = "1.2.2"
