[package]
name = "csearch_app"
version = "1.0.0"
edition = "2021"
description = "library with core logic for csearch"
authors = ["Daniil Nebytov <daniil2002.11@mail.ru>"]
repository = "https://github.com/Nanoster1/csearch"

[dependencies]
anyhow = "1.0.70"
url = "2.3.1"
urlencoding = "2.1.2"
webbrowser = "0.8.8"
