[package]
name = "csearch_app"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.70"
url = "2.3.1"
urlencoding = "2.1.2"
webbrowser = "0.8.8"
