[package]
name = "csearch"
version = "1.1.0"
edition = "2021"
description = "Enter your query and it will be opened in browser"
authors = ["Daniil Nebytov <daniil2002.11@mail.ru>"]
repository = "https://github.com/Nanoster1/csearch"
license = "MIT"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0.70"
csearch_app = { version = "1.0.0", path = "../csearch_app" }
clap = { version = "4.1.13", features = ["cargo"] }
clap_complete = "4.1.5"
nameof = "1.2.2"
