[package]
name = "csearch"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0.70"
csearch_app = { version = "1.0.0", path = "../csearch_app" }
clap = { version = "4.1.13", features = ["cargo"] }
clap_complete = "4.1.5"
nameof = "1.2.2"
